k8s/10-infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels: { app: postgres }
  template:
    metadata:
      labels: { app: postgres }
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports: [{ containerPort: 5432 }]
          volumeMounts:
            - { name: data, mountPath: /var/lib/postgresql/data }
            - { name: init, mountPath: /docker-entrypoint-initdb.d }
      volumes:
        - { name: data, persistentVolumeClaim: { claimName: postgres-pvc } }
        - { name: init, configMap: { name: postgres-init } }
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: banking
spec:
  selector: { app: postgres }
  ports: [{ port: 5432, targetPort: 5432 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels: { app: rabbitmq }
  template:
    metadata:
      labels: { app: rabbitmq }
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports: [{ containerPort: 5672 }, { containerPort: 15672 }]
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: banking
spec:
  selector: { app: rabbitmq }
  ports:
    - { name: amqp, port: 5672, targetPort: 5672 }
    - { name: mgmt, port: 15672, targetPort: 15672 }
