k8s/20-core.yaml
# Socle : config-server, discovery (Eureka), gateway
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
  namespace: banking
spec:
  replicas: 1
  selector: { matchLabels: { app: config-service } }
  template:
    metadata: { labels: { app: config-service } }
    spec:
      containers:
        - name: config-service
          image: plateforme-bancaire-config-service:latest
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8888 }]
---
apiVersion: v1
kind: Service
metadata: { name: config-service, namespace: banking }
spec:
  selector: { app: config-service }
  ports: [{ port: 8888, targetPort: 8888 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
  namespace: banking
spec:
  replicas: 1
  selector: { matchLabels: { app: discovery-service } }
  template:
    metadata: { labels: { app: discovery-service } }
    spec:
      containers:
        - name: discovery-service
          image: plateforme-bancaire-discovery-service:latest
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8761 }]
---
apiVersion: v1
kind: Service
metadata: { name: discovery-service, namespace: banking }
spec:
  selector: { app: discovery-service }
  ports: [{ port: 8761, targetPort: 8761 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: banking
spec:
  replicas: 1
  selector: { matchLabels: { app: gateway-service } }
  template:
    metadata: { labels: { app: gateway-service } }
    spec:
      containers:
        - name: gateway-service
          image: plateforme-bancaire-gateway-service:latest
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8080 }]
---
apiVersion: v1
kind: Service
metadata: { name: gateway-service, namespace: banking }
spec:
  selector: { app: gateway-service }
  ports: [{ port: 8080, targetPort: 8080 }]
